--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,13 @@ section{
     padding: 10px 40px;
     border-radius: 5px;
 }
+.link-btn{
+    margin-top: 30px;
+}
+
+/* dream big section */
+.dream-big{
+    background-image: url(../images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
